# Vision2020

./: .gitignore  CMakeLists.txt  CamSettings.conf  CmakeLists.txt  Functions.cpp  Functions.hpp  MJPEGWriter.cpp  MJPEGWriter.hpp  Network.cpp  Network.cpp.save  Network.hpp  README.md  TODO  VisionSettings.conf  WebStreamTest.cpp  compile.sh  main.cpp  main.cpp.save  opencv_with_cuda.sh  setCam.sh  vision.service
.cache/clangd/index/: Functions.cpp.434D1E8CA044EA4B.idx  Functions.hpp.6D46E75FD4C6ACB4.idx  Network.cpp.ABA31BA4049F7669.idx  WebStream.cpp.47CA57A367D8352B.idx  WebStream.hpp.7D05F29AF79ACEF3.idx  main.cpp.1612AB271C55D958.idx
.clangd/index/: Functions.cpp.595B1806FEAF1866.idx  Functions.hpp.FEDF62189B5BBCB8.idx  Network.cpp.EA96A477F15BA91A.idx  main.cpp.31934FFB663E7BBF.idx
cbp/: CMakeCache.txt  Makefile  cmake_install.cmake  vision2020  vision2020.cbp  vision2020.layout
src/: Functions.cpp  Functions.hpp  Network.cpp  Network.hpp  WebStream.cpp  WebStream.hpp  main.cpp  server.cpp  setCam.sh  sockets.rb
src/headers/: WebStream.hpp  server.hpp
src/test/: clientTest.rb
src/vision2020/: Functions.cpp  Network.cpp  main.cpp  sockets.lua  sockets.rb
src/vision2020/include/: Network.hpp
test_folder/: test.txt
